Remove responsive bug with overflow:auto

--- a/src/components/indexPage/indexPageStyle.scss
+++ b/src/components/indexPage/indexPageStyle.scss
@@ -20,3 +20,10 @@
     grid-template-columns: 1fr;
   }
 }
+
+@media screen and (max-width:map-get(styleVariables.$breakpoints, "phone")){
+  .index_mid_panel{
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
